Add Project Files

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 Cloud_Name=dcn93ic66
 Cloud_api_key=983757244656525
 Cloud_api_secret=7EiMoci7QhaQVRh-rOcsp2K1K48
+
+ATLASDB_URL=mongodb+srv://pankaj1952005_db_user:EhB8sQaFqWgzOK1C@cluster0.wfgi1yc.mongodb.net/?appName=Cluster0
+secret:'@ffj6yc',
